# world-reward

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: autonomous_driving.yaml  marine_maritime.yaml  public_safety.yaml
src/worldbench/: __init__.py  config_loader.py  dataset_writer.py  exceptions.py  gemini_client.py  generator.py  models.py  prompt_builder.py  scorer.py  verifier.py  video_generator.py
src/worldreward/: __init__.py  cli.py  config_loader.py  dataset_writer.py  exceptions.py  gemini_client.py  generator.py  main.py  models.py  paths.py  prompt_builder.py  repl.py  scorer.py  setup_wizard.py  spinner.py  verifier.py  video_generator.py
src/worldreward/builtin_configs/: autonomous_driving.yaml  public_safety.yaml
tests/: test_cli_args.py  test_cli_integration.py  test_config_loader.py  test_main_integration.py  test_models.py  test_paths.py  test_prompt_builder.py  test_scorer.py  test_setup_wizard.py  test_timeouts.py
